2003-06-25  Glynn Foster  <glynn.foster@sun.com>

	* stylesheets/l10n.txt: Update correct italian translation
	for Next/Previous/Contents.

2003-06-16  Alex Duggan  <aldug@astrolinux.com>
 
 	* src/yelp-main.c: s/dir/directory/  Fixes #111818
 
2003-06-16  Mikael Hallendal  <micke@imendio.com>

	* src/yelp-db2html.c: 
	(main): Exit with a warning if file doesn't exist. Fixes #104478.

2003-06-13  Mikael Hallendal  <micke@imendio.com>

        * *: Updated my contact information
	
2003-06-10 John Fleck <jfleck@inkstain.net>

	* src/Makefile.am
	* src/yelp-db2html.c
	* src/yelp-scrollkeeper.c
	* stylesheets/Makefile.am
	* stylesheets/yelp-custom.xsl
	* stylesheets/yelp-customization.xsl
	  added
	* stylesheets/yelp-functions.xsl
	  patch from Shaun McCance to address bug #114117

2003-06-04  Mikael Hallendal  <micke@codefactory.se>

        * Release 2.3.3

        * configure.in: Updated to 2.3.3
	
	* NEWS: Updated for 2.3.3

        * src/yelp-scrollkeeper.c: (scrollkeeper_parse_toc_section):
	- fixed leak found by Kjartan.

	* src/yelp-reader.c: 
	- style fixes
	- fixes memory leaks found and patched by Narayana Pattipati
	- fixes #110572  
	
2003-06-03  Mikael Hallendal  <micke@codefactory.se>

        * src/yelp-window.c: (window_about_cb): 
	- If About window is already showing, don't create another one.
	  Patch by Steve Chaplin, fixes #113906

2003-06-03  Mikael Hallendal  <micke@codefactory.se>

	* src/yelp-view-content.c: (content_reader_finished_cb):
	- Use gtp_tree_view_expand_to_path to expand the tree instead of callin
	  gtk_tree_view_expand_path on all parents. Fixes #113977

2003-06-03  Kenneth Rohde Christiansen  <kenneth@gnu.org>

	* configure.in: Added "li" (Limburgish) to ALL_LINGUAS.

2003-05-26  Telsa Gwynne  <hobbit@aloss.ukuu.org.uk>

	* configure.in: Added "cy" to ALL_LINGUAS

2003-05-06  Danilo Šegan  <dsegan@gmx.net>

	* configure.in: Added "sr" and "sr@Latn" to ALL_LINGUAS.

2003-05-01  Paul Duffy <dubhthach@frink.nuigalway.ie>
