@@ -1,6 +1,11 @@
 2003-06-25  Glynn Foster  <glynn.foster@sun.com>
 
-	* stylesheets/l10n.txt: Update correct italian translation
+	* stylesheets/l10n.xml: Add some new languages from 
+	Mike Lei - merging patches from sun-patches.
+
+2003-06-25  Glynn Foster  <glynn.foster@sun.com>
+
+	* stylesheets/l10n.xml: Update correct italian translation
 	for Next/Previous/Contents.
 
 2003-06-16  Alex Duggan  <aldug@astrolinux.com>
